# mylittlepwny

./: .emacs.init  .gitlab-ci.yml  LICENSE  Makefile  README.org  cpa-hyps.hs  cpa.hs  file.txt  haskell-aes.cabal  main.hs  mylittlepwny.cabal  random.html  sca.hs  stack.yaml
benchmarks/: bench-aes.hs
doc/: AES Reference Implementation in Haskell.html
doc/AES Reference Implementation in Haskell_files/: main.css
docker/: Dockerfile  entrypoint.sh
lib/: Aes.hs  AesImport.hs  CLI.hs  CPA.hs  Masking.hs  TTest.hs  Traces.hs  View.hs
lib/Aes/: Bits.hs  Bytes.hs  Hypothesis.hs  Random.hs  Reference.hs  Types.hs  Util.hs
lib/TTest/: Common.hs  NonSpecific.hs  Specific.hs
lib/Traces/: Internal.hs  PicoScope.hs  Raw.hs  Text.hs
lib/Traces/PicoScope/: PicoScope.hs  Stm32.hs
src/: Aes.hs  AesImport.hs  AesReference.hs  CLI.hs  CPA.hs  Folds.hs  Masking.hs  TTest.hs  Traces.hs  View.hs
src/Aes/: Bits.hs  Bytes.hs  Hypothesis.hs  Plaintext.hs  QuickCheck.hs  Random.hs  Reference.hs  Types.hs  Util.hs
src/CLI/: Internal.hs  Types.hs
src/TTest/: Internal.hs  NonSpecific.hs  Specific.hs
src/Traces/: Internal.hs  Raw.hs  Text.hs
tests/: criterion.hs  doctest.hs  tasty.hs
tests/traces/: key.txt  pico.cfg  plaintexts.txt  unprotected.raw
