name:                haskell-aes
version:             0.2.0.0
-- A short (one-line) description of the package.
-- synopsis:
-- A longer description of the package.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Damien Couroussé
maintainer:          damien.courousse@cea.fr
-- A copyright notice.
-- copyright:
--
-- category:
build-type:          Simple
-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Aes
                     , Aes.Hypothesis
                     , Aes.Random
                     , AesImport
                     , Masking
  other-modules:       Aes.Reference
                     , Aes.Bits
                     , Aes.Bytes
                     , Aes.Types
                     , Aes.Util
                     , Aes.Bits
  build-depends:       base >= 4 && < 5
                     , array >=0.5 && <0.6
                     , bytestring
                     , random
  default-language:    Haskell2010
  if !flag(debug)
    ghc-options:    -Wall -O2 +RTS -N -RTS
  else
    ghc-options:    -Wall

executable cpa-hyps
  main-is:             cpa-hyps.hs
  other-modules:       Paths_haskell_aes
  build-depends:       base >= 4 && < 5
                     , bytestring
                     , haskell-aes
                     , filepath
                     , random
                     , optparse-applicative
  if !flag(debug)
    ghc-options:    -Wall -threaded -O2 +RTS -N -RTS
  else
    ghc-options:    -Wall -threaded
  hs-source-dirs:      .

test-suite tasty
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
                  , src
  main-is:          tasty.hs
  other-modules:    Aes.Types

  build-depends:    haskell-aes
                  , base >= 4 && < 5
                  , containers
                  , random
                  , smallcheck == 1.1.*
                  , smallcheck-series
                  , tasty >= 0.8
                  , tasty-hunit
                  , tasty-smallcheck
                  -- haskell-aes dependencies
                  , array >=0.5 && <0.6
                  , bytestring
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -O2 +RTS -N -RTS

test-suite doctest
  type: exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          doctest.hs
  build-depends:    haskell-aes
                  , base >= 4 && < 5
                  , doctest
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

flag debug
    default: False
    manual: True
