name:                haskell-aes
version:             0.2.0.0
-- A short (one-line) description of the package.
-- synopsis:
-- A longer description of the package.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Damien Couroussé
maintainer:          damien.courousse@cea.fr
-- A copyright notice.
-- copyright:
--
-- category:
build-type:          Simple
-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:
cabal-version:       >=1.10

flag debug
    default: False
    manual: True

flag development
    description:
        Turn on '-Werror'
    default: False
    manual: True

flag threadscope
    default: False
    manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Aes
                     , Aes.Hypothesis
                     , Aes.Random
                     , AesImport
                     , Folds
                     , Masking
  other-modules:       Aes.Reference
                     , Aes.Bits
                     , Aes.Bytes
                     , Aes.Types
                     , Aes.Util
                     , Aes.Bits
  build-depends:       base == 4.9.*
                     , array >=0.5 && <0.6
                     , bytestring
                     , deepseq
                     , folds
                     , random
                     , vector
  default-language:    Haskell2010


executable cpa-hyps
  main-is:             cpa-hyps.hs
  other-modules:       Paths_haskell_aes
  build-depends:       base >= 4 && < 5
                     , haskell-aes
                     , random
                     , optparse-applicative
  if !flag(debug)
    ghc-options:    -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  else
    ghc-options:    -Wall -threaded
  hs-source-dirs:      .

  if flag(development)
    ghc-options:    -Wall

executable cpa
  main-is:             cpa.hs
  other-modules:       Paths_haskell_aes
  build-depends:       base >= 4 && < 5
                     , async
                     , Chart
                     , Chart-cairo
                     , deepseq
                     , filepath
                     , haskell-aes
                     , optparse-applicative
                     , parallel
                     , text-format
                     , vector
                     -- Traces
                     , split
  hs-source-dirs:      .
  ghc-options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  ghc-options:       -Wno-name-shadowing

  if flag(threadscope)
    ghc-options:     -Wall -O2 -threaded -rtsopts "-with-rtsopts=-ls -N" -eventlog

  if flag(development)
    ghc-options:     -Wall

  if flag(debug)
    ghc-options:     -Wall

test-suite tasty
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
                  , src
  main-is:          tasty.hs
  other-modules:    Aes
                  , Aes.Bits
                  , Aes.Bytes
                  , Aes.Hypothesis
                  , Aes.Random
                  , Aes.Reference
                  , Aes.Types
                  , Aes.Util
                  , AesImport
                  , Masking
  build-depends:    base >= 4 && < 5
                  , deepseq
                  , random
                  , smallcheck == 1.1.*
                  , smallcheck-series
                  , tasty >= 0.8
                  , tasty-hunit
                  , tasty-smallcheck
                  -- haskell-aes dependencies
                  , array >=0.5 && <0.6
                  , bytestring
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite doctest
  type: exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          doctest.hs
  build-depends:    base >= 4 && < 5
                  , doctest
  default-language: Haskell2010
  ghc-options:      -Wall

benchmark aes
  type: exitcode-stdio-1.0
  hs-source-dirs:   benchmarks
  main-is:          bench-aes.hs
  build-depends:    haskell-aes
                  , base >= 4 && < 5
                  , criterion
  default-language: Haskell2010
  ghc-options:      -O2
                    -Wall -threaded -rtsopts -with-rtsopts=-N

-- threadscope usage:
-- $ stack build --flag scarlet:threadscope
-- $ stack exec scarlet -- +RTS -ls -RTS files
-- $ threadscope scarlet.eventlog &
