name:                mylittlepwny
version:             0.3.0.0
-- A short (one-line) description of the package.
-- synopsis:
-- A longer description of the package.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Damien Couroussé
maintainer:          damien.courousse@cea.fr
-- A copyright notice.
-- copyright:
--
-- category:
build-type:          Simple
-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:
cabal-version:       >=1.10

flag debug
    default: False
    manual: True

flag development
    description:
        Turn on '-Werror'
    default: False
    manual: True

flag threadscope
    default: False
    manual: True

library
  hs-source-dirs:      lib
  exposed-modules:     Aes
                     , Aes.Hypothesis
                     , Aes.Random
                     , Aes.Bits
                     , AesImport
                     , Masking
  other-modules:       Aes.Reference
                     , Aes.Bytes
                     , Aes.Types
                     , Aes.Util
  build-depends:       base
                     , array
                     , bytestring
                     , deepseq
                     , random
  default-language:    Haskell2010


executable cpa-hyps
  main-is:             cpa-hyps.hs
  other-modules:       Paths_mylittlepwny
  build-depends:       base
                     , mylittlepwny
                     , random
                     , optparse-applicative
  if !flag(debug)
    ghc-options:    -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  else
    ghc-options:    -Wall -threaded
  hs-source-dirs:      .

  if flag(development)
    ghc-options:    -Wall

executable sca
  main-is:             sca.hs
  hs-source-dirs:      src
  other-modules:       Paths_mylittlepwny
                     , CLI
                     , CLI.Internal
                     , CPA
                     , Folds
                     , TTest
                     , TTest.NonSpecific
                     , TTest.Specific
                     , Traces.Raw
                     , View
  build-depends:       base
                     , Chart
                     , Chart-cairo
                     , async
                     , binary
                     , bytestring
                     , conduit
                     , deepseq
                     , filepath
                     , folds
                     , formatting
                     , mylittlepwny
                     , optparse-applicative
                     , parallel
                     , text
                     , vector
  hs-source-dirs:      .
  ghc-options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  ghc-options:       -Wno-name-shadowing

  if flag(threadscope)
    ghc-options:     -Wall -O2 -threaded -rtsopts "-with-rtsopts=-ls -N" -eventlog

  if flag(development)
    ghc-options:     -Wall

  if flag(debug)
    ghc-options:     -Wall

test-suite tasty
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
                  , src
                  , lib
  main-is:          tasty.hs
  other-modules:    Aes
                  , Aes.Bits
                  , Aes.Bytes
                  , Aes.Hypothesis
                  , Aes.Random
                  , Aes.Reference
                  , Aes.Types
                  , Aes.Util
                  , AesImport
                  , Masking
  build-depends:    base
                  , deepseq
                  , random
                  , smallcheck == 1.1.*
                  , tasty
                  , tasty-hunit
                  , tasty-smallcheck
                  -- mylittlepwny dependencies
                  , array
                  , bytestring
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite doctest
  type: exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          doctest.hs
  build-depends:    base
                  , doctest
  default-language: Haskell2010
  ghc-options:      -Wall

benchmark aes
  type: exitcode-stdio-1.0
  hs-source-dirs:   benchmarks
  main-is:          bench-aes.hs
  build-depends:    mylittlepwny
                  , base
                  , criterion
  default-language: Haskell2010
  ghc-options:      -O2
                    -Wall -threaded -rtsopts -with-rtsopts=-N

-- threadscope usage:
-- $ stack build --flag scarlet:threadscope
-- $ stack exec scarlet -- +RTS -ls -RTS files
-- $ threadscope scarlet.eventlog &
